# Trybo

./: .gitignore  README.md  analyze_friction.py  build_lammps_gpu.sh  nanoparticle-wear.lammps  pyproject.toml  stats.out  trybo_wear_simulation.lammps  use_trybo.sh
examples/: Au.yml  Cu.yml  Pt.yml
src/: main.py
src/analyzers/: __init__.py  centro_symmetric_analyzer.py  cna_analyzer.py  coordination_analyzer.py  debris_analyzer.py  energy_analyzer.py  hotspot_analyzer.py  ptm_analyzer.py  statistical_analyzer.py  velocity_squared_analyzer.py  vonmises_analyzer.py
src/core/: analyzer.py  base_parser.py  helpers.py  simulation_runner.py  yaml_config.py
src/parsers/: __init__.py  center_symmetry_parser.py  centro_symmetric_parser.py  cna_parser.py  coordination_parser.py  debris_parser.py  dump_parser.py  energy_parser.py  hotspot_parser.py  velocity_squared_parser.py  vonmises_parser.py
src/templates/: wear_template.lammps
src/templates/base/: in.contact_and_approach  in.geometry  in.groups_and_restrictions  in.load_friction  in.main  in.potentials_and_minimization  in.stats_and_data_output  in.system  in.thermal_conditions
src/templates/base/analysis/: in.estructural  in.hotspots  (+4 more)
src/utilities/: analyzer.py
src/visualizers/: __init__.py  atom_3d_visualizer.py  centro_symmetric_visualizer.py  cna_visualizer.py  coordination_visualizer.py  debris_visualizer.py  energy_visualizer.py  histogram_visualizer.py  hotspot_visualizer.py  ptm_visualizer.py  slice_visualizer.py  velocity_squared_visualizer.py  vonmises_visualizer.py
toolchain/: build_lammps_gpu.sh
